--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: Freelancer
-email: your-email@domain.com
-url: https://github.com/jeromelachaud/freelancer-theme
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-keywords: "your keywords, separated by commas"
-skills: "Web Developer - Graphic Artist - User Experience Designer"
-meta_author: LastName FirstName
+title: Murtaza Tamjeed
+email: tamj786@gmail.com
+url: https://murtazatamjeed.github.io/
+description: "Murtaza Tamjeed's Personal Website"
+keywords: "Murtaza, Tamjeed, UX Researchr, User Experience, Accessibility"
+skills: "UX Researcher"
+meta_author: Tamjeed Murtaza
 
 # Google webmaster tools
 google_verify:
@@ -32,31 +32,25 @@ color:
 
 # Footer settings
 footer:
-  copyright: Dr. Henry Jekyll
+  copyright: Murtaza Tamjeed
   location: Location
   social: Around the Web
-  credits: Credits
+  # credits: Credits
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: http://twitter.com/jekyllrb
-  - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket
-    url: http://bitbucket.org/jekyll
+    url: https://twitter.com/MurtazaTamjeed
+  - title: LinkedIn
+    url: https://www.linkedin.com/in/murtaza-tamjeed/
   - title: github
-    url: http://github.com/jekyll
+    url: https://github.com/murtazatamjeed
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: Rochester
+  - line: New York
 
-# Credits content
-credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
 
 # Build settings
 markdown: kramdown
