--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: Murtaza Tamjeed
-email: tamj786@gmail.com
-url: https://murtazatamjeed.github.io/
+title: "Murtaza Tamjeed"
+email: "tamj786@gmail.com"
+url: "https://murtazatamjeed.github.io/"
 description: "Murtaza Tamjeed's Personal Website"
 keywords: "Murtaza, Tamjeed, UX Researchr, User Experience, Accessibility"
 skills: "UX Researcher"
