--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,8 @@ email: "tamj786@gmail.com"
 url: "https://murtazatamjeed.github.io/"
 description: "Murtaza Tamjeed's Personal Website"
 keywords: "Murtaza, Tamjeed, UX Researchr, User Experience, Accessibility"
-skills: "I’m a Ph.D. student in Computing and Information Sciences at Rochester Institute of Technology, conducting research in HCI and Accessibility. I'm also a researcher at the Center for Accessibility and Inclusion Research (CAIR). Currently interning with Yahoo!'s Accessibility and Product Inclusion Team"
+skills: "I’m a Ph.D. student in Computing and Information Sciences at Rochester Institute of Technology, conducting research in HCI and Accessibility. I'm also a researcher at the Center for Accessibility and Inclusion Research (CAIR). Currently interning with Yahoo!'s Accessibility and Product Inclusion Team."
+        <p>My previous work </>
 meta_author: Tamjeed Murtaza
 
 # Google webmaster tools
