--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ email: "tamj786@gmail.com"
 url: "https://murtazatamjeed.github.io/"
 description: "Murtaza Tamjeed's Personal Website"
 keywords: "Murtaza, Tamjeed, UX Researchr, User Experience, Accessibility"
-skills: I’m a Ph.D. student in Computing and Information Sciences at Rochester Institute of Technology, conducting research in HCI and Accessibility. I'm also a researcher at the Center for Accessibility and Inclusion Research (CAIR). Currently interning with Yahoo!'s Accessibility and Product Inclusion Team.
-        Accessibility of Research I want to make research more accessible. My current project focuses on designing and developing support tools including strategies and software solutions to support researchers with disabilities.
+skills: <p>I’m a Ph.D. student in Computing and Information Sciences at Rochester Institute of Technology, conducting research in HCI and Accessibility. I'm also a researcher at the Center for Accessibility and Inclusion Research (CAIR). Currently interning with Yahoo!'s Accessibility and Product Inclusion Team.
+        <p>Accessibility of Research I want to make research more accessible. My current project focuses on designing and developing support tools including strategies and software solutions to support researchers with disabilities.
 meta_author: Tamjeed Murtaza
 
 # Google webmaster tools
