--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: "tamj786@gmail.com"
 url: "https://murtazatamjeed.github.io/"
 description: "Murtaza Tamjeed's Personal Website"
 keywords: "Murtaza, Tamjeed, UX Researchr, User Experience, Accessibility"
-skills: I’m a Ph.D. student in Computing and Information Sciences at Rochester Institute of Technology, conducting research in HCI and Accessibility, and advised by <a href="http://kristenshinohara.com/">Dr. Kristen Shinohara</a>. I completed my master’s degree in Software Engineering on the Fulbright program with a focus on engineering accessible software.  
+skills: I’m a Ph.D. student in Computing and Information Sciences at Rochester Institute of Technology, conducting research in HCI and Accessibility, and advised by Dr. Kristen Shinohara. I completed my master’s degree in Software Engineering on the Fulbright program with a focus on engineering accessible software.  
 <br /> <br />
 My research focuses on designing and developing support tools, including strategies and software solutions that empower researchers with disabilities, in particular computing doctoral students who conduct research in university settings. Meanwhile, I study accessibility in user reviews using machine learning techniques. My current project involves NLP to analyze and automate identification of accessibility user reviews for mobile apps. I also investigate how NLP models are biased toward disability and in predicting and classifying accessibility-related user reviews. 
 <br /><br />
