--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ footer:
 social:
   - title: twitter
     url: https://twitter.com/MurtazaTamjeed
-  - title: LinkedIn
+  - title: linkedin
     url: https://www.linkedin.com/in/murtaza-tamjeed/
   - title: github
     url: https://github.com/murtazatamjeed
