--- a/_config.yml
+++ b/_config.yml
@@ -53,11 +53,13 @@ social:
     url: https://www.linkedin.com/in/murtaza-tamjeed/
   - title: github
     url: https://github.com/murtazatamjeed
+  - title: google-scholar
+    url: https://scholar.google.com/citations?user=eGq_1IQAAAAJ&hl=en&oi=ao
 
 # Postal address (add as many lines as necessary)
 address:
   - line: Rochester
-  - line: New York
+  - line: New York, USA
 
 
 # Build settings
