--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ social:
     url: https://www.linkedin.com/in/murtaza-tamjeed/
   - title: github
     url: https://github.com/murtazatamjeed
-  - title: google-scholar
+  - title: google
     url: https://scholar.google.com/citations?user=eGq_1IQAAAAJ&hl=en&oi=ao
 
 # Postal address (add as many lines as necessary)
