--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "Murtaza Tamjeed"
+title: "About Murtaza Tamjeed"
 email: "tamj786@gmail.com"
 url: "https://murtazatamjeed.github.io/"
 description: "Murtaza Tamjeed's Personal Website"
