--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,11 @@ email: "tamj786@gmail.com"
 url: "https://murtazatamjeed.github.io/"
 description: "Murtaza Tamjeed's Personal Website"
 keywords: "Murtaza, Tamjeed, UX Researchr, User Experience, Accessibility"
-skills: "I’m a Ph.D. student in Computing and Information Sciences at Rochester Institute of Technology, conducting research in HCI and Accessibility, and advised by Dr. Kristen Shinohara. I completed my master’s degree in Software Engineering on the Fulbright program with a focus on engineering accessible software.  
+skills: "Hello! I am a Ph.D. student in Computing and Information Sciences at Rochester Institute of Technology, and advised by Kristen Shinohara. I'm a member of the Center for Accessibility and Inclusion Research (CAIR), conducting research in HCI and Accessibility. 
 <br /> <br />
-My research focuses on designing and developing support tools, including strategies and software solutions that empower researchers with disabilities, in particular computing doctoral students who conduct research in university settings. Meanwhile, I study accessibility in user reviews using machine learning techniques. My current project involves NLP to analyze and automate identification of accessibility user reviews for mobile apps. I also investigate how NLP models are biased toward disability and in predicting and classifying accessibility-related user reviews. 
+My research focuses on investigating needs and then designing and developing support tools, including strategies and software solutions that empower researchers with disabilities, in particular computing doctoral students who conduct research in university settings. Currently, I'm conducting an in-depth analysis of the interplay between accessibility and usability of research tools through user studies, expert surveys, and guideline analysis focusing on introducing a set of coupled guidelines that covers both accessibility and usability. Meanwhile, I study accessibility in user reviews using machine learning techniques. My current project involves NLP to analyze and automate identification of accessibility user reviews for mobile apps. I also investigate how NLP models are biased toward disability and in predicting and classifying accessibility-related user reviews. 
 <br /><br />
-I'm also a researcher at the Center for Accessibility and Inclusion Research (CAIR) lab. Currently, interning with Yahoo’s Accessibility and Product Inclusion team. My previous experiences include working with Tetra Tech as a Lead Software Developer, with PAE as Senior Database Specialist and with ADRAS as a Software Developer. 
+My previous experiences include interning with Yahoo’s Accessibility and Product Inclusion team, working with Tetra Tech as a Lead Software Developer, with PAE as a Senior Database Specialist, and with ADRAS as a Software Developer. 
 <br /><br />
 Check out my CV for the full details." 
 
