--- a/_config.yml
+++ b/_config.yml
@@ -4,13 +4,13 @@ email: "tamj786@gmail.com"
 url: "https://murtazatamjeed.github.io/"
 description: "Murtaza Tamjeed's Personal Website"
 keywords: "Murtaza, Tamjeed, UX Researchr, User Experience, Accessibility"
-skills: "Hello! I am a Ph.D. student in Computing and Information Sciences at Rochester Institute of Technology, and advised by Kristen Shinohara. I'm a member of the Center for Accessibility and Inclusion Research (CAIR), conducting research in HCI and Accessibility. 
+skills: "Hello! I am a Ph.D. student in Computing and Information Sciences at Rochester Institute of Technology, advised by Kristen Shinohara. I'm a member of the Center for Accessibility and Inclusion Research (CAIR), conducting research in HCI and Accessibility. 
 <br /> <br />
 My research focuses on investigating needs and then designing and developing support tools, including strategies and software solutions that empower researchers with disabilities, in particular computing doctoral students who conduct research in university settings. Currently, I'm conducting an in-depth analysis of the interplay between accessibility and usability of research tools through user studies, expert surveys, and guideline analysis focusing on introducing a set of coupled guidelines that covers both accessibility and usability. Meanwhile, I study accessibility in user reviews using machine learning techniques. My current project involves NLP to analyze and automate identification of accessibility user reviews for mobile apps. I also investigate how NLP models are biased toward disability and in predicting and classifying accessibility-related user reviews. 
 <br /><br />
 My previous experiences include interning with Yahoo’s Accessibility and Product Inclusion team, working with Tetra Tech as a Lead Software Developer, with PAE as a Senior Database Specialist, and with ADRAS as a Software Developer. 
 <br /><br />
-Check out my CV for the full details." 
+<p>Please check out my CV for the full details.<p>" 
 
 
 meta_author: Tamjeed Murtaza
