--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ My research focuses on investigating needs and then designing and developing sup
 <br /><br />
 My previous experiences include interning with Yahoo’s Accessibility and Product Inclusion team, working with Tetra Tech as a Lead Software Developer, with PAE as a Senior Database Specialist, and with ADRAS as a Software Developer. 
 <br /><br />
-<p>Please check out my CV for the full details.<p>" 
+<p>Please check out my <a href="https://www.google.com/">CV</a> for the full details.<p>" 
 
 
 meta_author: Tamjeed Murtaza
