--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ My previous experiences include interning with Yahoo’s Accessibility and Produ
 <br /><br />
 <p>Please check out my <a href="https://www.google.com/">CV</a> for the full details.<p>" 
 
+<p>Please check out my <a href="https://www.google.com/">CV</a> for the full details.<p>
 
 meta_author: Tamjeed Murtaza
 
