--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: "tamj786@gmail.com"
 url: "https://murtazatamjeed.github.io/"
 description: "Murtaza Tamjeed's Personal Website"
 keywords: "Murtaza, Tamjeed, UX Researchr, User Experience, Accessibility"
-skills: "Hello! I am a Ph.D. student in Computing and Information Sciences at Rochester Institute of Technology, advised by Dr. Kristen Shinohara. Also, I'm a member of the Center for Accessibility and Inclusion Research (CAIR), conducting research in HCI and Accessibility. My current work broadly focuses on accessibility of research and accessibility of higher education. 
+skills: "Hello! I am a Ph.D. student in Computing and Information Sciences at Rochester Institute of Technology, advised by Dr. Kristen Shinohara. Also, I'm a member of the Center for Accessibility and Inclusion Research (CAIR), conducting research in HCI and Accessibility. My current work focuses on accessibility of research and accessibility of higher education. 
  
 <br /><br />
 My industry experience includes interning with Yahoo’s Accessibility and Product Inclusion team as UX Researcher, working with Tetra Tech as a Lead Software Developer, with PAE as a Senior Database Specialist, and with ADRAS as a Software Developer. 
