--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: "Murtaza Tamjeed"
 email: "tamj786@gmail.com"
 url: "https://murtazatamjeed.github.io/"
 description: "Murtaza Tamjeed's Personal Website"
-keywords: "Murtaza, Tamjeed, UX Researchr, User Experience, Accessibility"
-skills: "Hello! I am a Ph.D. student in Computing and Information Sciences at Rochester Institute of Technology, advised by Dr. Kristen Shinohara. Also, I'm a member of the Center for Accessibility and Inclusion Research (CAIR), conducting research in HCI and Accessibility. My current work focuses on accessibility of research and accessibility of higher education. 
+keywords: "Murtaza, Tamjeed, UX Researcherr, Inclusive Designer, Accessibility"
+skills: "Hello! I’m a Senior UX Researcher and Inclusive Designer with a strong passion for promoting accessibility and fostering inclusion in every digital experience. With a commitment to understanding user needs and advocating for diverse perspectives, I strive to create products and services that are truly user-centric and inclusive." 
  
 <br /><br />
 My industry experience includes interning with Yahoo’s Accessibility and Product Inclusion team as UX Researcher, working with Tetra Tech as a Lead Software Developer, with PAE as a Senior Database Specialist, and with ADRAS as a Software Developer. 
