--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,8 @@ email: "tamj786@gmail.com"
 url: "https://murtazatamjeed.github.io/"
 description: "Murtaza Tamjeed's Personal Website"
 keywords: "Murtaza, Tamjeed, UX Researcherr, Inclusive Designer, Accessibility"
-skills: "Hello! I’m a Senior UX Researcher and Inclusive Designer with a strong passion for promoting accessibility and fostering inclusion in every digital experience. With a commitment to understanding user needs and advocating for diverse perspectives, I strive to create products and services that are truly user-centric and inclusive. 
+skills: "UX Research | Inclusive Design | Accessibility" 
 
-</br>
-</br>
-<p>Please check out my CV for the full details.<p>" 
 
 meta_author: Tamjeed Murtaza
 
