--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: "tamj786@gmail.com"
 url: "https://murtazatamjeed.github.io/"
 description: "Murtaza Tamjeed's Personal Website"
 keywords: "Murtaza, Tamjeed, UX Researcherr, Inclusive Designer, Accessibility"
-skills: "UX Research | Inclusive Design | Accessibility" 
+skills: "Inclusive Design | Accessibility | UX Research" 
 
 
 meta_author: Tamjeed Murtaza
